- supported.conf: update so that supported modules don't require   unsupported ones by adding following modules: async_pq   async_raid6_recov ath blkback_pagemap crypto_hash drm_kms_helper   fddi fscache lib80211 libfcoe libipw libiscsi_tcp llc md_mod mdio   mfd_core nf_defrag_ipv4 p8022 psnap raid6_pq tr ttm ucb1400_core   v4l2_compat_ioctl32.

--- a/supported.conf
+++ b/supported.conf
@@ -71,6 +71,8 @@
 		kernel/crypto/anubis
 		kernel/crypto/arc4					# ARC4 Cipher Algorithm
 		kernel/crypto/async_tx/async_memcpy
+		kernel/crypto/async_tx/async_pq
+		kernel/crypto/async_tx/async_raid6_recov
 		kernel/crypto/async_tx/async_tx
 		kernel/crypto/async_tx/async_xor
 		kernel/crypto/authenc
@@ -97,6 +99,7 @@
 		kernel/crypto/fcrypt
 		kernel/crypto/gcm
 		kernel/crypto/gf128mul
+		kernel/crypto/crypto_hash
 		kernel/crypto/khazad					# Khazad Cryptographic Algorithm
 		kernel/crypto/krng
 		kernel/crypto/lrw
@@ -396,6 +399,7 @@
 		kernel/drivers/gpio/pca953x
 		kernel/drivers/gpio/pcf857x
 		kernel/drivers/gpu/drm/drm				# DRM core
+		kernel/drivers/gpu/drm/drm_kms_helper
 		kernel/drivers/gpu/drm/i810/i810				# Intel i810
 -		kernel/drivers/gpu/drm/i830/i830				# obsoleted by i915
 		kernel/drivers/gpu/drm/i915/i915				# Intel 830M/i915
@@ -405,6 +409,7 @@
 -		kernel/drivers/gpu/drm/savage/savage
 -		kernel/drivers/gpu/drm/sis/sis				# SIS 300/630/540
 		kernel/drivers/gpu/drm/tdfx/tdfx				# 3dfx Banshee/Voodoo3+
+		kernel/drivers/gpu/drm/ttm/ttm
 -		kernel/drivers/gpu/drm/via/via
 		kernel/drivers/hid/hid
 		kernel/drivers/hid/usbhid/usbhid
@@ -753,10 +758,12 @@
 		kernel/drivers/md/faulty
 		kernel/drivers/md/linear
 -		kernel/drivers/md/multipath				# Replaced by dm-multipath
+		kernel/drivers/md/md-mod
 		kernel/drivers/md/raid0
 		kernel/drivers/md/raid1
 		kernel/drivers/md/raid10
 		kernel/drivers/md/raid456
+		kernel/drivers/md/raid6_rq
 		kernel/drivers/media/common/ir-common
 		kernel/drivers/media/common/saa7146			# driver for generic saa7146-based hardware
 		kernel/drivers/media/common/saa7146_vv			# video4linux driver for saa7146-based hardware
@@ -998,6 +1005,7 @@
 		kernel/drivers/media/video/uvc/uvcvideo
 		kernel/drivers/media/video/v4l1-compat			# v4l(1) compatibility layer for v4l2 drivers.
 		kernel/drivers/media/video/v4l2-common			# misc helper functions for v4l2 device drivers
+		kernel/drivers/media/video/v4l2-compat-ioctl32
 		kernel/drivers/media/video/v4l2-int-device
 		kernel/drivers/media/video/videobuf-core
 		kernel/drivers/media/video/videobuf-dma-contig
@@ -1036,8 +1044,10 @@
 		kernel/drivers/message/i2o/i2o_core
 		kernel/drivers/message/i2o/i2o_proc
 -		kernel/drivers/message/i2o/i2o_scsi			# Unsupported - bug #176735
+		kernel/drivers/mfd/mfd-core
 		kernel/drivers/mfd/htc-pasic3
 		kernel/drivers/mfd/sm501
+		kernel/drivers/mfd/ucb1400_core
 		kernel/drivers/misc/acer-wmi
 		kernel/drivers/misc/asus-laptop
 		kernel/drivers/misc/compal-laptop
@@ -1286,6 +1296,7 @@
 		kernel/drivers/net/phy/libphy
 		kernel/drivers/net/phy/lxt
 		kernel/drivers/net/phy/marvell
+		kernel/drivers/net/mdio
 		kernel/drivers/net/phy/mdio-bitbang
 		kernel/drivers/net/phy/mdio-ofgpio
 		kernel/drivers/net/phy/qsemi
@@ -1398,6 +1409,7 @@
 -		kernel/drivers/net/wireless/airo_cs			# Support for Cisco/Aironet 802.11 wireless ethernet cards. This is the module that links the PCMCIA card with the airo module.
 -		kernel/drivers/net/wireless/airo			# Support for Cisco/Aironet 802.11 wireless ethernet cards. Direct support for ISA/PCI/MPI cards and support for PCMCIA when used with airo_cs.
 		kernel/drivers/net/wireless/airport
+		kernel/drivers/net/wireless/ath/ath
 		kernel/drivers/net/wireless/ath5k/ath5k
 		kernel/drivers/net/wireless/ath9k/ath9k
 		kernel/drivers/net/wireless/atmel_cs			# Support for Atmel at76c50x 802.11 wireless ethernet cards.
@@ -1410,8 +1422,9 @@
 -		kernel/drivers/net/wireless/hostap/hostap			# Host AP common routines
 -		kernel/drivers/net/wireless/hostap/hostap_pci					# Support for Intersil Prism2.5-based 802.11 wireless LAN PCI cards.
 -		kernel/drivers/net/wireless/hostap/hostap_plx					# Support for Intersil Prism2-based 802.11 wireless LAN cards (PLX).
-		kernel/drivers/net/wireless/ipw2100						# Intel(R) PRO/Wireless 2100 Network Driver
--		kernel/drivers/net/wireless/ipw2200
++external	kernel/drivers/net/wireless/ipw2x00/ipw2100
++external	kernel/drivers/net/wireless/ipw2x00/ipw2200
++external	kernel/drivers/net/wireless/ipw2x00/libipw
 		kernel/drivers/net/wireless/iwlwifi/iwl3945
 		kernel/drivers/net/wireless/iwlwifi/iwlagn
 		kernel/drivers/net/wireless/iwlwifi/iwlcore
@@ -1591,6 +1604,7 @@
 		kernel/drivers/scsi/iscsi_tcp				# open-iscsi client
 		kernel/drivers/scsi/libfc/libfc				# Library module for FC devices
 		kernel/drivers/scsi/libiscsi				# open-iscsi library
+		kernel/drivers/scsi/libiscsi_tcp
 		kernel/drivers/scsi/libsas/libsas			# Library module for SAS devices
 		kernel/drivers/scsi/libsrp				# Library module for SRP devices
 		kernel/drivers/scsi/lpfc/lpfc
@@ -1876,6 +1890,7 @@
 +isa		kernel/drivers/watchdog/wdt
 		kernel/drivers/watchdog/wdt_pci			# Driver for the ICS PCI-WDT500/501 watchdog cards
 		kernel/drivers/xen/blkback/blkbk			# Xen block device backend
+		kernel/drivers/xen/blkback/blkback_pagemap		# Xen block device backend
 +base		kernel/drivers/xen/blkfront/xenblk			# Xen block device frontend
 		kernel/drivers/xen/blktap/blktap
 		kernel/drivers/xen/gntdev/gntdev
@@ -1915,6 +1930,7 @@
 		kernel/fs/fat/fat
 -		kernel/fs/freevxfs/freevxfs				# Veritas Filesystem (VxFS) driver
 		kernel/fs/fuse/fuse					# FUSE: Filesystem in Userspace
+		kernel/fs/fscache
 -		kernel/fs/gfs2/gfs2
 -		kernel/fs/gfs2/locking/dlm/lock_dlm
 		kernel/fs/hfs/hfs
@@ -2022,9 +2038,13 @@
 		kernel/net/8021q/8021q
 		kernel/net/9p/9pnet
 		kernel/net/9p/9pnet_virtio
+		kernel/net/802/fddi
 		kernel/net/802/garp
+		kernel/net/802/p8022
 		kernel/net/802/p8023
+		kernel/net/802/psnap
 		kernel/net/802/stp
+		kernel/net/802/tr
 		kernel/net/appletalk/appletalk				# AppleTalk 0.20
 -		kernel/net/atm/atm
 		kernel/net/atm/atm
@@ -2131,6 +2151,7 @@
 		kernel/net/ipv4/netfilter/ipt_TTL			# IP tables TTL modification module
 		kernel/net/ipv4/netfilter/ipt_ULOG			# iptables userspace logging module
 		kernel/net/ipv4/netfilter/nf_conntrack_ipv4
+		kernel/net/ipv4/netfilter/nf_defrag_ipv4
 		kernel/net/ipv4/netfilter/nf_nat_amanda			# Amanda NAT helper
 		kernel/net/ipv4/netfilter/nf_nat_ftp			# ftp NAT helper
 		kernel/net/ipv4/netfilter/nf_nat_h323
@@ -2203,6 +2224,7 @@
 		kernel/net/iucv/iucv
 		kernel/net/key/af_key
 -		kernel/net/lapb/lapb					# The X.25 Link Access Procedure B link layer protocol
+		kernel/net/llc/llc
 -		kernel/net/llc/llc2					# IEEE 802.2 PF_LLC support
 		kernel/net/mac80211/mac80211
 		kernel/net/netfilter/nf_conntrack
@@ -2320,6 +2342,7 @@
 		kernel/net/sunrpc/xprtrdma/xprtrdma
 -		kernel/net/wanrouter/wanrouter
 		kernel/net/wireless/cfg80211
+		kernel/net/wireless/lib80211
 -		kernel/net/x25/x25					# The X.25 Packet Layer network layer protocol
 		kernel/net/xfrm/xfrm_ipcomp
 		kernel/net/xfrm/xfrm_user
