- rpm/kernel-binary.spec.in: obsolete kvm-kmp.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -195,6 +195,7 @@ Obsoletes:      btusb-kmp-%build_flavor
 Obsoletes:      enic-kmp-%build_flavor
 Obsoletes:      fnic-kmp-%build_flavor
 Obsoletes:      brocade-bfa-kmp-%build_flavor
+Obsoletes:      kvm-kmp-%build_flavor
 # sle11
 Obsoletes:      ocfs2-kmp-%build_flavor
 # 11.1
