--- a/series.conf
+++ b/series.conf
@@ -281,6 +281,7 @@
 	# NFS
 	########################################################
 	patches.fixes/nfsd-acl.patch
+	patches.fixes/nfs-slot-table-alloc
 
 	########################################################
 	# lockd + statd
