- patches.suse/files-slab-rcu.patch: SLAB_DESTROY_BY_RCU for   file slab.

--- a/series.conf
+++ b/series.conf
@@ -215,6 +215,7 @@
 	patches.suse/file-capabilities-disable-by-default.diff
 
 	patches.suse/unlock_page-speedup.patch
+	patches.suse/files-slab-rcu.patch
 
 	########################################################
 	# nfsacl protocol (agruen)
