- patches.drivers/libata-ahci-aspire-3810t-noncq: ahci: disable   NCQ on Aspire 3810t (bnc#522790).

--- a/series.conf
+++ b/series.conf
@@ -373,6 +373,7 @@
 	patches.drivers/libata-prefer-over-ide
 
 	patches.drivers/libata-ata_piix-clear-spurious-IRQ
+	patches.drivers/libata-ahci-aspire-3810t-noncq
 
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
