- patches.fixes/zisofs-large-pagesize-read.patch: zisofs:   Implement reading of compressed files when PAGE_CACHE_SIZE >   compress block size (bnc#540349).

--- a/series.conf
+++ b/series.conf
@@ -340,6 +340,7 @@
 	patches.suse/nfs4acl-common.diff
 	patches.suse/nfs4acl-ext3.diff
 	patches.suse/nfs4acl-ai.diff
+	patches.fixes/zisofs-large-pagesize-read.patch
 
 	########################################################
 	# These patches are from the netfilter team, and
