- rpm/*.spec.in, rpm/kernel-module-subpackage: add   Provides: multiversion(kernel) to binary kernel packages,   kernel-source, kernel-syms and all KMPs so that zypp can be   configured to keep multiple versions of these packages   (fate#305311).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -67,6 +67,7 @@ Url:            http://www.kernel.org/
 AutoReqProv:    on
 BuildRequires:  coreutils module-init-tools sparse
 BuildRequires:  fdupes
+Provides:       multiversion(kernel)
 Provides:       %{name}_%_target_cpu = %version-%release
 %if %split_base
 Provides:       kernel-base = %version-%source_rel
@@ -691,6 +692,7 @@ License:        GPL v2 only
 Group:          System/Kernel
 Url:            http://www.kernel.org/
 AutoReqProv:    on
+Provides:       multiversion(kernel)
 Provides:       kernel-base = %version-%source_rel
 Requires(pre):  coreutils awk
 Requires(post): module-init-tools
@@ -723,6 +725,7 @@ License:        GPL v2 only
 Group:          System/Kernel
 Url:            http://www.kernel.org/
 AutoReqProv:    on
+Provides:       multiversion(kernel)
 Provides:       %name-extra_%_target_cpu = %version-%release
 Provides:       kernel-extra = %version-%source_rel
 Requires:       %{name}_%_target_cpu = %version-%release
@@ -773,6 +776,7 @@ kmsg message documentation comments.
 Summary:        Development files necessary for building kernel modules
 License:        GPL v2 only
 Group:          Development/Sources
+Provides:       multiversion(kernel)
 Provides:       %name-devel = %version-%source_rel
 Requires:       kernel-source%variant = %version-%source_rel
 AutoReqProv:    on
