--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -43,6 +43,7 @@ AutoReqProv:    off
 BuildRequires:  coreutils sed
 BuildRequires:  fdupes
 Requires(post): coreutils sed
+Provides:       multiversion(kernel)
 Provides:       linux
 Provides:       %name = %version-%source_rel
 Source0:        http://www.kernel.org/pub/linux/kernel/v2.6/linux-%srcversion.tar.bz2
@@ -116,6 +117,7 @@ Summary:        Vanilla Linux kernel sources with minor build fixes.
 License:        GPL v2 only
 Group:          Development/Sources
 AutoReqProv:    off
+Provides:       multiversion(kernel)
 
 %description vanilla
 Vanilla Linux kernel sources with minor build fixes.
