--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.32-rc3-rc4
 	patches.kernel.org/patch-2.6.32-rc4-rc5
 	patches.kernel.org/patch-2.6.32-rc5-rc6
+	patches.kernel.org/patch-2.6.32-rc6-rc7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -144,7 +145,6 @@
 
 	patches.arch/add_support_for_hpet_msi_intr_remap.patch
 	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
-	patches.arch/x86_amd_fix_erratum_63.patch	
 
 	########################################################
 	# x86_64/4096CPUS - from SGI
