- patches.fixes/hid-fixup-ncr-quirk.patch: HID: fixup quirk for   NCR devices (bnc#548807).

--- a/series.conf
+++ b/series.conf
@@ -452,6 +452,7 @@
 	patches.suse/Cleanup-and-make-boot-splash-work-with-KMS.patch
 	patches.drivers/elousb.patch
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
+	patches.fixes/hid-fixup-ncr-quirk.patch
 
 	##########################################################
 	# Sound
