- patches.arch/kvm-only-export-selected-pv-ops-feature-structs:   Only export selected pv-ops feature structs (bnc#556135). - patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic:   Replace kvm io delay pv-ops with linux magic (bnc#556135). - patches.arch/kvm-split-paravirt-ops-by-functionality:   Split paravirt ops by functionality (bnc#556135). - patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature:   Split the KVM pv-ops support by feature (bnc#556135). - patches.xen/xen3-patch-2.6.23: Refresh. - patches.xen/xen3-patch-2.6.31: Refresh.

--- a/series.conf
+++ b/series.conf
@@ -147,6 +147,11 @@
 	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
 	patches.arch/x86-crypto-pclmulqdq-accelerated-implementation.patch
 
+	patches.arch/kvm-split-paravirt-ops-by-functionality
+	patches.arch/kvm-only-export-selected-pv-ops-feature-structs
+	patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature
+	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
+
 	########################################################
 	# x86_64/4096CPUS - from SGI
 	########################################################
