- patches.drivers/aacraid-24701-update: Problems with aacraid   (bnc#524242,FATE#307437).

--- a/series.conf
+++ b/series.conf
@@ -389,6 +389,7 @@
 	patches.fixes/scsi-dh-alua-send-stpg
 
 	patches.fixes/scsi-check-host-lookup-failure
+	patches.drivers/aacraid-24701-update
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
