--- a/series.conf
+++ b/series.conf
@@ -105,6 +105,7 @@
 +needs_update-32	patches.suse/sysctl-add-affinity_load_balancing
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/self-ptrace.patch
+	patches.suse/hung_task_timeout-configurable-default
 
         ########################################################
         # Architecture-specific patches. These used to be all
