- patches.fixes/kvm-ioapic.patch: Ignore apic polarity    (bnc#556564).  - patches.fixes/kvm-macos.patch: Implement some missing intercepts    so osx doesn't blow up (bnc#556564).

--- a/series.conf
+++ b/series.conf
@@ -592,6 +592,13 @@
 +needs_update-32	patches.fixes/nfs-write.c-bug-removal.patch
 	patches.fixes/ia64-configure-HAVE_UNSTABLE_SCHED_CLOCK-for-SGI_SN.patch
 
+	########################################################
+	# KVM patches
+	########################################################
+
+	patches.fixes/kvm-ioapic.patch
+	patches.fixes/kvm-macos.patch
+
         ########################################################
 	# Staging tree patches
 	# new drivers that are going upstream
