- Update config files. - patches.drivers/hpsa: hpsa: New driver SCSI driver for HP   Smart Array (FATE#307153,bnc#555855). - supported.conf: Mark hpsa as supported.

--- a/series.conf
+++ b/series.conf
@@ -399,6 +399,7 @@
 +needs_update	patches.drivers/mpt-fusion-4.16.00.00-update
 +needs_update	patches.drivers/qla4xxx-sles11-update
 +needs_update	patches.drivers/qla4xxx-5.01.00-k8_sles11-03-update
+	patches.drivers/hpsa
 	patches.fixes/scsi-skip-nonscsi-device-for-dma
 	patches.fixes/scsi-dh-alua-retry-UA
 	patches.fixes/scsi-add-tgps-setting
