- patches.fixes/scsi_dh-always-attach-sysfs: scsi_dh: create   sysfs file, dh_state for all SCSI disk devices. - patches.fixes/scsi_dh-change-activate-interface: scsi_dh: Change   the scsidh_activate interface to be asynchronous (bnc#556144). - patches.fixes/scsi_dh-make-alua-handler-asynchronous: scsi_dh:   Make alua hardware handler's activate() async (bnc#556144). - patches.fixes/scsi_dh-make-hp_sw-handler-asynchronous: scsi_dh:   Make hp hardware handler's activate() async (bnc#556144). - patches.fixes/scsi_dh-make-rdac-handler-asynchronous: scsi_dh:   Make rdac hardware handler's activate() async (bnc#556144).

--- a/series.conf
+++ b/series.conf
@@ -402,6 +402,11 @@
 	patches.fixes/scsi-dh-alua-retry-UA
 	patches.fixes/scsi-add-tgps-setting
 	patches.fixes/scsi-dh-alua-send-stpg
+	patches.fixes/scsi_dh-change-activate-interface
+	patches.fixes/scsi_dh-make-rdac-handler-asynchronous
+	patches.fixes/scsi_dh-make-hp_sw-handler-asynchronous
+	patches.fixes/scsi_dh-make-alua-handler-asynchronous
+	patches.fixes/scsi_dh-always-attach-sysfs
 
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/aacraid-24701-update
