- patches.fixes/bnx2i-use-common-iscsi-suspend-queue: bnx2i:   use common iscsi suspend queue (FATE#307215). - patches.fixes/iscsi-class-modify-handling-of-replacement-time:   iscsi class: modify handling of replacement timeout   (FATE#307215). - patches.fixes/iser-set-tgt-and-lu-reset-timeout: iser: set   tgt and lu reset timeout (FATE#307215). - patches.fixes/libiscsi-add-warm-target-reset-tmf-support:   libiscsi: add warm target reset tmf support (FATE#307215). - patches.fixes/libiscsi-check-tmf-state-before-sending-pdu:   libiscsi: Check TMF state before sending PDU (FATE#307215). - patches.fixes/libiscsi-fix-login-text-checks-in-pdu-inject:   libiscsi: fix login/text checks in pdu injection code   (FATE#307215). - patches.fixes/scsi-add-scsi-target-reset-support-to-ioctl:   add scsi target reset support to scsi ioctl. - patches.fixes/scsi-devinfo-update-hitachi-entries: scsi_devinfo:   update Hitachi entries (v2). - patches.fixes/scsi-fc-class-failfast-bsg-requests: [SCSI]   fc class: fail fast bsg requests. - patches.drivers/cxgb3i: Delete. - patches.drivers/cxgb3i-fixed-offload-array-size: Delete. - patches.fixes/disable-lro-per-default: Delete.

--- a/series.conf
+++ b/series.conf
@@ -396,6 +396,11 @@
 	patches.fixes/scsi-inquiry-too-short-ratelimit
 	patches.suse/scsi-netlink-ml
 
+	# from scsi-misc
+	patches.fixes/scsi-fc-class-failfast-bsg-requests
+	patches.fixes/scsi-add-scsi-target-reset-support-to-ioctl
+	patches.fixes/scsi-devinfo-update-hitachi-entries
+
 +needs_update	patches.drivers/mpt-fusion-4.16.00.00-update
 	patches.drivers/hpsa
 	patches.fixes/scsi-skip-nonscsi-device-for-dma
@@ -445,9 +450,12 @@
 	########################################################
 	# iSCSI
 	########################################################
-+needs_update	patches.drivers/cxgb3i
-+needs_update	patches.drivers/cxgb3i-fixed-offload-array-size
-+needs_update	patches.fixes/disable-lro-per-default
+patches.fixes/bnx2i-use-common-iscsi-suspend-queue
+patches.fixes/libiscsi-fix-login-text-checks-in-pdu-inject
+patches.fixes/libiscsi-check-tmf-state-before-sending-pdu
+patches.fixes/libiscsi-add-warm-target-reset-tmf-support
+patches.fixes/iscsi-class-modify-handling-of-replacement-time
+patches.fixes/iser-set-tgt-and-lu-reset-timeout
 
 	########################################################
 	# PCI and PCI hotplug
