- rpm/kernel-binary.spec.in: Kill support for kernel-$flavor   symbols, we need a unified kernel-source for all flavors.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -220,11 +220,11 @@ if ! [ -e %_sourcedir/linux-%srcversion.tar.bz2 ]; then
     exit 1
 fi
 
-SYMBOLS=%name
+SYMBOLS=
 if test -e %_sourcedir/extra-symbols; then
-	SYMBOLS="$SYMBOLS $(cat %_sourcedir/extra-symbols)"
+	SYMBOLS=$(cat %_sourcedir/extra-symbols)
+	echo "extra symbol(s):" $SYMBOLS
 fi
-echo "Symbol(s):" $SYMBOLS
 
 # Unpack all sources and patches
 %setup -q -c -T -a 0 -a 100 -a 101 -a 102 -a 103 -a 104 -a 105 -a 107 -a 108 -a 109 -a 110 -a 111 -a 112 -a 113 -a 120
