- patches.suse/dm-mpath-evaluate-request-result-and-sense:   multipath: Evaluate request result and sense code   (FATE#303695,bnc#433920,bnc#442001).

--- a/series.conf
+++ b/series.conf
@@ -535,7 +535,7 @@ patches.fixes/iser-set-tgt-and-lu-reset-timeout
 +needs_update	patches.suse/dm-mpath-requeue-for-stopped-queue
 	patches.suse/dm-mpath-null-pgs
 	patches.fixes/dm-table-switch-to-readonly
-
+	patches.suse/dm-mpath-evaluate-request-result-and-sense
 
 	########################################################
 	# md
