- patches.suse/add-queue_depth-ramp-up-code.patch: add queue_depth   ramp up code (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-add-a-separate-scsi-transport-template-for-npiv-vports.patch:   fcoe: add a separate scsi transport template for NPIV vports   (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-add-check-to-fail-gracefully-in-bonding-mode.patch:   fcoe: add check to fail gracefully in bonding mode (fate#306857,   fate#306859, bnc#551175). - patches.suse/fcoe-call-ndo_fcoe_enable-disable-to-turn-fcoe-feature-on-off-in-lld.patch:   fcoe: Call ndo_fcoe_enable/disable to turn FCoE feature on/off   in LLD (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-fix-checking-san-mac-address.patch: fcoe: Fix   checking san mac address (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-fix-getting-san-mac-for-vlan-interface.patch:   fcoe: Fix getting san mac for VLAN interface (fate#306857,   fate#306859, bnc#551175). - patches.suse/fcoe-fix-setting-lport-s-wwnn-wwpn-to-use-san-mac-address.patch:   fcoe: Fix setting lport's WWNN/WWPN to use san mac address   (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-fix-using-vlan-id-in-creating-lport-s-wwwn-wwpn.patch:   fcoe: Fix using VLAN ID in creating lport's WWWN/WWPN   (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-formatting-cleanups-and-commenting.patch:   fcoe: Formatting cleanups and commenting (fate#306857,   fate#306859, bnc#551175). - patches.suse/fcoe-increase-fcoe_max_lun-to-0xffff-65535.patch:   fcoe: Increase FCOE_MAX_LUN to 0xFFFF (65535) (fate#306857,   fate#306859, bnc#551175). - patches.suse/fcoe-initialize-return-value-in-fcoe_destroy.patch:   fcoe: initialize return value in fcoe_destroy (fate#306857,   fate#306859, bnc#551175). - patches.suse/fcoe-libfc-fix-an-libfc-issue-with-queue-ramp-down-in-libfc.patch:   fcoe, libfc: fix an libfc issue with queue ramp down in libfc   (fate#306857, fate#306859, bnc#551175). - patches.suse/fcoe-libfc-us

--- a/series.conf
+++ b/series.conf
@@ -443,6 +443,83 @@
 	patches.drivers/ehea-modinfo.patch
 +needs_update-32	patches.drivers/tg3_libphy_workaround
 
+	#FCOE update (fate#306857, fate#306859, bnc#551175)
+	patches.suse/libfc-fix-typo-in-retry-check-on-received-prli.patch
+	patches.suse/libfc-fix-ddp-in-fc_fcp-for-0-xid.patch
+	patches.suse/fcoe-remove-redundant-checking-of-netdev-netdev_ops.patch
+	patches.suse/libfc-fcoe-don-t-export_symbols-unnecessarily.patch
+	patches.suse/libfc-remove-unused-fc_lport-pointer-from-fc_fcp_pkt_abort.patch
+	patches.suse/libfc-fix-wrong-scsi-return-status-under-fc_data_undrun.patch
+	patches.suse/libfc-lport-fix-minor-documentation-errors.patch
+	patches.suse/libfc-don-t-warn_on-in-lport_timeout-for-reset-state.patch
+	patches.suse/libfc-removes-initializing-fc_cpu_order-and-fc_cpu_mask-per-lport.patch
+	patches.suse/libfc-adds-missing-exch-release-for-accepted-rrq.patch
+	patches.suse/libfc-removes-unused-disc_work-and-ex_list.patch
+	patches.suse/fcoe-initialize-return-value-in-fcoe_destroy.patch
+	patches.suse/fcoe-use-netif_f_fcoe_mtu-flag-to-set-up-max-frame-size-lport-mfs.patch
+	patches.suse/libfc-fix-frags-in-frame-exceeding-skb_max_frags-in-fc_fcp_send_data.patch
+	patches.suse/fcoe-call-ndo_fcoe_enable-disable-to-turn-fcoe-feature-on-off-in-lld.patch
+	patches.suse/libfc-fix-memory-corruption-caused-by-double-frees-and-bad-error-handling.patch
+	patches.suse/libfc-fix-free-of-fc_rport_priv-with-timer-pending.patch
+	patches.suse/modify-change_queue_depth-to-take-in-reason-why-it-is-being-called.patch
+	patches.suse/scsi-error-have-scsi-ml-call-change_queue_depth-to-handle-queue_full.patch
+	patches.suse/libfc-convert-to-scsi_track_queue_full.patch
+	patches.suse/fcoe-libfc-fix-an-libfc-issue-with-queue-ramp-down-in-libfc.patch
+	patches.suse/add-queue_depth-ramp-up-code.patch
+	patches.suse/libfc-add-queue_depth-ramp-up.patch
+	patches.suse/fcoe-increase-fcoe_max_lun-to-0xffff-65535.patch
+	patches.suse/libfc-move-non-common-routines-and-prototypes-out-of-libfc-h.patch
+	patches.suse/libfc-remove-fc_fcp_complete.patch
+	patches.suse/libfc-add-libfc-fc_libfc-ch-for-libfc-internal-routines.patch
+	patches.suse/libfc-move-libfc_init-and-libfc_exit-to-fc_libfc-c.patch
+	patches.suse/libfc-changes-to-libfc_host_alloc-to-consolidate-initialization-with-allocation.patch
+	patches.suse/libfc-add-some-generic-npiv-support-routines-to-libfc.patch
+	patches.suse/libfc-vport-link-handling-and-fc_vport-state-managment.patch
+	patches.suse/libfc-libfcoe-fdisc-els-for-npiv.patch
+	patches.suse/libfcoe-fcoe-libfcoe-npiv-support.patch
+	patches.suse/fcoe-add-a-separate-scsi-transport-template-for-npiv-vports.patch
+	patches.suse/fcoe-npiv-vport-create-destroy.patch
+	patches.suse/libfc-rpn_id-is-obsolete-and-unnecessary.patch
+	patches.suse/libfc-rnn_id-may-be-required-before-rsnn_nn-with-some-switches.patch
+	patches.suse/libfc-register-symbolic-node-name-rsnn_nn.patch
+	patches.suse/libfc-register-symbolic-port-name-rspn_id.patch
+	patches.suse/libfc-combine-name-server-registration-response-handlers.patch
+	patches.suse/libfc-combine-name-server-registration-request-functions.patch
+	patches.suse/fcoe-vport-symbolic-name-support.patch
+	patches.suse/libfc-export-fc-headers.patch
+	patches.suse/libfc-add-routine-to-copy-data-from-a-buffer-to-a-sg-list.patch
+	patches.suse/libfc-fcoe-add-fc-passthrough-support.patch
+	patches.suse/libfc-formatting-cleanups-across-libfc.patch
+	patches.suse/libfcoe-formatting-and-comment-cleanups.patch
+	patches.suse/fcoe-formatting-cleanups-and-commenting.patch
+	patches.suse/fcoe-libfc-use-single-frame-allocation-api.patch
+	patches.suse/libfc-reduce-can_queue-for-all-fcp-frame-allocation-failures.patch
+	patches.suse/libfc-adds-can_queue-ramp-up.patch
+	patches.suse/libfcoe-allow-fip-to-be-disabled-by-the-driver.patch
+	patches.suse/libfcoe-fip-use-scsi-host-number-to-identify-debug-messages.patch
+	patches.suse/libfcoe-fip-allow-fip-receive-to-be-called-from-irq.patch
+	patches.suse/libfcoe-fip-should-report-link-to-libfc-whether-selected-or-not.patch
+	patches.suse/libfcoe-don-t-send-els-in-fip-mode-if-no-fcf-selected.patch
+	patches.suse/fcoe-remove-extra-function-decalrations.patch
+	patches.suse/fcoe-add-check-to-fail-gracefully-in-bonding-mode.patch
+	patches.suse/libfc-fix-rnn_id-smashing-skb-payload.patch
+	patches.suse/libfc-fix-symbolic-name-registrations-smashing-skb-data.patch
+	patches.suse/libfc-fix-fc_els_resp_type-to-correct-display-of-ct-responses.patch
+	patches.suse/libfc-add-set_fid-function-to-libfc-template.patch
+	patches.suse/libfc-add-host-number-to-lport-link-up-down-messages.patch
+	patches.suse/libfcoe-fcoe-simplify-receive-flogi-response.patch
+	patches.suse/libfc-register-fc4-features-with-the-fc-switch.patch
+	patches.suse/fcoe-fix-checking-san-mac-address.patch
+	patches.suse/fcoe-fix-getting-san-mac-for-vlan-interface.patch
+	patches.suse/fcoe-fix-setting-lport-s-wwnn-wwpn-to-use-san-mac-address.patch
+	patches.suse/libfc-do-not-use-did_no_connect-for-pkt-alloc-failures.patch
+	patches.suse/fcoe-fix-using-vlan-id-in-creating-lport-s-wwwn-wwpn.patch
+	patches.suse/libfc-fcoe-fixes-for-highmem-skb-linearize-panics.patch
+	patches.suse/libfc-fix-an-issue-of-pending-exch-es-after-i-f-destroyed-or-rmmod-fcoe.patch
+	patches.suse/libfcoe-do-not-pad-fip-keep-alive-to-full-frame-size.patch
+	patches.suse/libfc-fcoe-increase-els-and-ct-timeouts.patch
+
+
 	########################################################
 	# Wireless Networking
 	########################################################
