Implement IBM features (not only) on powerpc: 304346: Relocatable kernel for ppc64 (remove kernel-kdump package TBD) 307059: Extended H_CEDE 307104: Kernel idle low power sleep support for POWER7 IIRC IBM tries to get these two into 2.6.33

--- a/series.conf
+++ b/series.conf
@@ -230,6 +230,16 @@
 
 	patches.arch/ppc-spufs-07-Don-t-spu_acquire_saved-unnecessarily.patch
 
+	patches.arch/ppc-extended_h_cede-kernel-dlpar
+	patches.arch/ppc-extended_h_cede-mv_of_drconf_cell
+	patches.arch/ppc-extended_h_cede-Export_memory_sysdev_class
+	patches.arch/ppc-extended_h_cede-memory-dlpar
+	patches.arch/ppc-extended_h_cede-cpu-dlpar
+	patches.arch/ppc-extended_h_cede-new_cede_processor
+	patches.arch/ppc-extended_h_cede-add_offline_states
+	patches.arch/ppc-extended_h_cede-node_offline_online_cpus
+	patches.arch/ppc-extended_h_cede-add_driver_lock
+
         ########################################################
         # PS3
         ########################################################
@@ -307,6 +317,16 @@
 	########################################################
 	# CPUFREQ
 	########################################################
+
+	patches.suse/cpuidle-cleanup
+	patches.suse/cpuidle-implement-list
+	patches.suse/cpuidle-cleanup-x86
+	patches.suse/cpuidle-enable-pseries
+	patches.suse/cpuidle-cleanup-pseries
+	patches.suse/cpuidle-add-default-idle-ppc
+	patches.suse/cpuidle-pseries-proc-idle
+	patches.suse/cpuidle-eliminate-ppcmdpowersave1
+	patches.suse/cpuidle-documentation
 
 	########################################################
 	# AGP, graphics related stuff
