- Update config files. - patches.arch/s390-message-catalog.diff: Kernel message   catalog. (bnc#549193,LTC#57210,FATE#306999). - rpm/kernel-binary.spec.in:

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -333,7 +333,7 @@ fi
 # You can also set this permanently in ~/.rpmmacros:
 #     %jobs 0%(grep -c ^processor /proc/cpuinfo)
 %if %CONFIG_KMSG_IDS == "y"
-    chmod +x scripts/kmsg-doc
+    chmod +x ../linux-%srcversion/scripts/kmsg-doc
     make %{?jobs:-j%jobs} all $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y D=2
 %else
     make %{?jobs:-j%jobs} all $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y
