--- a/series.conf
+++ b/series.conf
@@ -95,6 +95,7 @@
 	# Bug workarounds for binutils
 	########################################################
 	patches.suse/s390-System.map.diff
+	patches.arch/s390-message-catalog.diff
 
 	patches.arch/s390-01-qeth-isolation.patch
 
