--- a/series.conf
+++ b/series.conf
@@ -668,8 +668,13 @@ patches.fixes/iser-set-tgt-and-lu-reset-timeout
 	patches.suse/cgroup-disable-memory.patch
 
         ########################################################
-	# Tracing
-        ########################################################
+	# Performance Monitoring, Tracing etc
+	########################################################
+ 
+	patches.suse/perfmon2.patch
+	patches.suse/perfmon2_ioctl.patch  
+	patches.suse/perfmon2_noutrace.patch  
+
 
 +needs_updating	patches.trace/lttng-instrumentation-irq.patch
 +needs_updating	patches.trace/lttng-instrumentation-timer.patch
