- Update to 2.6.32-rc8.   - Eliminated 1 patch.

--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-2.6.32-rc4-rc5
 	patches.kernel.org/patch-2.6.32-rc5-rc6
 	patches.kernel.org/patch-2.6.32-rc6-rc7
+	patches.kernel.org/patch-2.6.32-rc7-rc8
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -221,7 +222,6 @@
 	patches.fixes/oom-warning
 	patches.suse/shmall-bigger
 	patches.fixes/grab-swap-token-oops
-	patches.suse/mm-do-not-disable-memory-hotplug-when-hibernation-is-enabled.patch
 
 +needs_update-32	patches.suse/osync-error
 	patches.fixes/remount-no-shrink-dcache
