--- a/series.conf
+++ b/series.conf
@@ -442,6 +442,7 @@
 	patches.fixes/tg3-fix-default-wol.patch
 	patches.drivers/ehea-modinfo.patch
 +needs_update-32	patches.drivers/tg3_libphy_workaround
+	patches.drivers/igb-add-support-for-82576NS-SerDes-adapter.patch
 
 	#FCOE update (fate#306857, fate#306859, bnc#551175)
 	patches.suse/libfc-fix-typo-in-retry-check-on-received-prli.patch
