- patches.drivers/bnx2-entropy-source.patch: bnx2: entropy source   (FATE#307517). - patches.drivers/e1000-entropy-source.patch: Enable e1000 as   entropy source (disabled by default) (FATE#307517). - patches.drivers/e1000e-entropy-source.patch: Enable e1000e as   entropy source (disabled by default) (FATE#307517). - patches.drivers/igb-entropy-source.patch: Enable igb as entropy   source (disabled by default) (FATE#307517). - patches.drivers/ixgbe-entropy-source.patch: Enable ixgbe as   entropy source (disabled by default) (FATE#307517). - patches.drivers/tg3-entropy-source.patch: tg3: entropy source   (FATE#307517).

--- a/series.conf
+++ b/series.conf
@@ -445,6 +445,14 @@
 +needs_update-32	patches.drivers/tg3_libphy_workaround
 	patches.drivers/igb-add-support-for-82576NS-SerDes-adapter.patch
 
+	# entropy FATE##307517
+        patches.drivers/bnx2-entropy-source.patch
+        patches.drivers/e1000-entropy-source.patch
+        patches.drivers/e1000e-entropy-source.patch
+        patches.drivers/igb-entropy-source.patch
+        patches.drivers/ixgbe-entropy-source.patch
+        patches.drivers/tg3-entropy-source.patch
+
 	#FCOE update (fate#306857, fate#306859, bnc#551175)
 	patches.suse/libfc-fix-typo-in-retry-check-on-received-prli.patch
 	patches.suse/libfc-fix-ddp-in-fc_fcp-for-0-xid.patch
