- patches.drivers/megaraid-04.12-update: megaraid: Update   megaraid_sas to version 04.12 (FATE#307125).

--- a/series.conf
+++ b/series.conf
@@ -417,6 +417,7 @@
 
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/aacraid-24701-update
+	patches.drivers/megaraid-04.12-update
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
