--- a/series.conf
+++ b/series.conf
@@ -116,6 +116,34 @@
 	patches.fixes/seccomp-disable-tsc-option
 	patches.suse/hung_task_timeout-configurable-default
 
+	# writable limits
+	patches.suse/rlim-0001-SECURITY-selinux-fix-update_rlimit_cpu-parameter.patch
+	patches.suse/rlim-0002-SECURITY-add-task_struct-to-setrlimit.patch
+	patches.suse/rlim-0003-core-add-task_struct-to-update_rlimit_cpu.patch
+	patches.suse/rlim-0004-sys_setrlimit-make-sure-rlim_max-never-grows.patch
+	patches.suse/rlim-0005-core-split-sys_setrlimit.patch
+	patches.suse/rlim-0006-core-allow-setrlimit-to-non-current-tasks.patch
+	patches.suse/rlim-0007-core-optimize-setrlimit-for-current-task.patch
+	patches.suse/rlim-0008-FS-proc-make-limits-writable.patch
+	patches.suse/rlim-0009-core-posix-cpu-timers-cleanup-rlimits-usage.patch
+	patches.suse/rlim-0010-core-do-security-check-under-task_lock.patch
+	patches.suse/rlim-0011-resource-add-helpers-for-fetching-rlimits.patch
+	patches.suse/rlim-0012-IA64-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0013-PPC-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0014-S390-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0015-SPARC-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0016-X86-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0017-FS-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0018-MM-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0019-core-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0020-misc-use-helpers-for-rlimits.patch
+	patches.suse/rlim-0021-core-rename-setrlimit-to-do_setrlimit.patch
+	patches.suse/rlim-0022-core-implement-getprlimit-and-setprlimit-syscalls.patch
+	patches.suse/rlim-0023-unistd-add-__NR_-get-set-prlimit-syscall-numbers.patch
+	patches.suse/rlim-0024-COMPAT-add-get-put_compat_rlimit.patch
+	patches.suse/rlim-0025-x86-add-ia32-compat-prlimit-syscalls.patch
+
+
         ########################################################
         # Architecture-specific patches. These used to be all
         # at the end of series.conf, but since we don't do
