--- a/series.conf
+++ b/series.conf
@@ -91,6 +91,7 @@
 	patches.suse/kvm-as-kmp
 	patches.suse/export-release_open_intent
 	patches.suse/export-security_inode_permission
+	patches.suse/export-sync_page_range
 
 	########################################################
 	# Bug workarounds for binutils
