- patches.suse/mm-tune-dirty-limits.patch: mm: Make default   VM dirty ratio configurable to suit different workloads   (bnc#552883).

--- a/series.conf
+++ b/series.conf
@@ -258,6 +258,7 @@
 
 	patches.suse/unlock_page-speedup.patch
 	patches.suse/files-slab-rcu.patch
+	patches.suse/mm-tune-dirty-limits.patch
 
 	########################################################
 	# nfsacl protocol (agruen)
