--- a/series.conf
+++ b/series.conf
@@ -183,6 +183,7 @@
 	patches.arch/add_support_for_hpet_msi_intr_remap.patch
 	patches.arch/add_x86_support_for_hpet_msi_intr_remap.patch
 	patches.arch/x86-crypto-pclmulqdq-accelerated-implementation.patch
+	patches.arch/x86-crypto-add-ghash-algorithm-test.patch
 
 	patches.arch/kvm-split-paravirt-ops-by-functionality
 	patches.arch/kvm-only-export-selected-pv-ops-feature-structs
