- Enabled:    patches.fixes/enclosure-fix-oops-while-iterating-enclosure_status-array

--- a/series.conf
+++ b/series.conf
@@ -659,6 +659,8 @@ patches.fixes/iser-set-tgt-and-lu-reset-timeout
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
 
+	patches.fixes/enclosure-fix-oops-while-iterating-enclosure_status-array
+
 	########################################################
 	# Other drivers we have added to the tree
 	########################################################
