- patches.arch/ppc-extended_h_cede-*: Increase power savings   by allowing the core to sleep.   (FATE#307059, bnc#550447)

--- a/series.conf
+++ b/series.conf
@@ -318,15 +318,16 @@
 	# CPUFREQ
 	########################################################
 
-	patches.suse/cpuidle-cleanup
-	patches.suse/cpuidle-implement-list
-	patches.suse/cpuidle-cleanup-x86
-	patches.suse/cpuidle-enable-pseries
-	patches.suse/cpuidle-cleanup-pseries
-	patches.suse/cpuidle-add-default-idle-ppc
-	patches.suse/cpuidle-pseries-proc-idle
-	patches.suse/cpuidle-eliminate-ppcmdpowersave1
-	patches.suse/cpuidle-documentation
+# cpuidle: not yet -- unresolved symbol on i586
+#	patches.suse/cpuidle-cleanup
+#	patches.suse/cpuidle-implement-list
+#	patches.suse/cpuidle-cleanup-x86
+#	patches.suse/cpuidle-enable-pseries
+#	patches.suse/cpuidle-cleanup-pseries
+#	patches.suse/cpuidle-add-default-idle-ppc
+#	patches.suse/cpuidle-pseries-proc-idle
+#	patches.suse/cpuidle-eliminate-ppcmdpowersave1
+#	patches.suse/cpuidle-documentation
 
 	########################################################
 	# AGP, graphics related stuff
