- patches.drivers/alsa-sp1-hda-17-fix-mute-LED-sync-idt92h383xxx:   ALSA: hda - Fix mute-LED sync on HP laptops with IDT92HD83xxx   codecs (bnc#547357).

--- a/series.conf
+++ b/series.conf
@@ -647,6 +647,7 @@ patches.fixes/iser-set-tgt-and-lu-reset-timeout
 	patches.drivers/alsa-sp1-hda-14-add-missing-export
 	patches.drivers/alsa-sp1-hda-15-fix-build-warning
 	patches.drivers/alsa-sp1-hda-16-stac-dual-headphones-fix
+	patches.drivers/alsa-sp1-hda-17-fix-mute-LED-sync-idt92h383xxx
 
 	########################################################
 	# Other driver fixes
