- Update config files. - patches.drivers/mpt-fusion-4.22.00.00-update: Update MPT Fusion   driver to 4.22.00.00-suse (bnc#556587). - patches.drivers/mpt-fusion-4.16.00.00-update: Delete.

--- a/series.conf
+++ b/series.conf
@@ -453,8 +453,11 @@
 	patches.fixes/scsi-fc-class-failfast-bsg-requests
 	patches.fixes/scsi-add-scsi-target-reset-support-to-ioctl
 	patches.fixes/scsi-devinfo-update-hitachi-entries
+	patches.suse/modify-change_queue_depth-to-take-in-reason-why-it-is-being-called.patch
+	patches.suse/scsi-error-have-scsi-ml-call-change_queue_depth-to-handle-queue_full.patch
+	patches.suse/add-queue_depth-ramp-up-code.patch
 
-+needs_update	patches.drivers/mpt-fusion-4.16.00.00-update
+	patches.drivers/mpt-fusion-4.22.00.00-update
 	patches.drivers/hpsa
 	patches.fixes/scsi-fix-bug-with-dma-maps-on-nested-scsi-objects
 	patches.fixes/scsi-introduce-helper-function-for-blocking-eh
@@ -528,11 +531,8 @@
 	patches.suse/fcoe-call-ndo_fcoe_enable-disable-to-turn-fcoe-feature-on-off-in-lld.patch
 	patches.suse/libfc-fix-memory-corruption-caused-by-double-frees-and-bad-error-handling.patch
 	patches.suse/libfc-fix-free-of-fc_rport_priv-with-timer-pending.patch
-	patches.suse/modify-change_queue_depth-to-take-in-reason-why-it-is-being-called.patch
-	patches.suse/scsi-error-have-scsi-ml-call-change_queue_depth-to-handle-queue_full.patch
 	patches.suse/libfc-convert-to-scsi_track_queue_full.patch
 	patches.suse/fcoe-libfc-fix-an-libfc-issue-with-queue-ramp-down-in-libfc.patch
-	patches.suse/add-queue_depth-ramp-up-code.patch
 	patches.suse/libfc-add-queue_depth-ramp-up.patch
 	patches.suse/fcoe-increase-fcoe_max_lun-to-0xffff-65535.patch
 	patches.suse/libfc-move-non-common-routines-and-prototypes-out-of-libfc-h.patch
@@ -595,12 +595,12 @@
 	########################################################
 	# iSCSI
 	########################################################
-patches.fixes/bnx2i-use-common-iscsi-suspend-queue
-patches.fixes/libiscsi-fix-login-text-checks-in-pdu-inject
-patches.fixes/libiscsi-check-tmf-state-before-sending-pdu
-patches.fixes/libiscsi-add-warm-target-reset-tmf-support
-patches.fixes/iscsi-class-modify-handling-of-replacement-time
-patches.fixes/iser-set-tgt-and-lu-reset-timeout
+	patches.fixes/bnx2i-use-common-iscsi-suspend-queue
+	patches.fixes/libiscsi-fix-login-text-checks-in-pdu-inject
+	patches.fixes/libiscsi-check-tmf-state-before-sending-pdu
+	patches.fixes/libiscsi-add-warm-target-reset-tmf-support
+	patches.fixes/iscsi-class-modify-handling-of-replacement-time
+	patches.fixes/iser-set-tgt-and-lu-reset-timeout
 
 	########################################################
 	# PCI and PCI hotplug
