- patches.fixes/netfilter-remove-pointless-config_nf_ct_acct-warning:   netfilter: Remove pointless CONFIG_NF_CT_ACCT warning   (bnc#552033 (and others)).

--- a/series.conf
+++ b/series.conf
@@ -412,15 +412,14 @@
 	patches.fixes/zisofs-large-pagesize-read.patch
 
 	########################################################
-	# These patches are from the netfilter team, and
-	# are required to tag IPsec packets for packet
-	# filtering purposes.
+	# Netfilter
 	########################################################
 
 	patches.suse/netfilter-ipt_LOG-mac
 
 	patches.suse/netfilter-ip_conntrack_slp.patch
 	patches.fixes/fix-nf_conntrack_slp
+	patches.fixes/netfilter-remove-pointless-config_nf_ct_acct-warning
 
 	########################################################
 	#
