- patches.fixes/oprofile_bios_ctr.patch: detect oprofile counters   reserved by bios (FATE#307426).

--- a/series.conf
+++ b/series.conf
@@ -743,6 +743,7 @@
 	patches.suse/perfmon2_ioctl.patch  
 	patches.suse/perfmon2_noutrace.patch  
 
+	patches.fixes/oprofile_bios_ctr.patch
 
 +needs_updating	patches.trace/lttng-instrumentation-irq.patch
 +needs_updating	patches.trace/lttng-instrumentation-timer.patch
