- patches.trace/lttng-*: update for 2.6.32 - patches.trace/lttng-instrumentation-timer.patch: Delete. - patches.xen/tmem: Refresh. - patches.xen/xen3-auto-common.diff: Refresh.

--- a/series.conf
+++ b/series.conf
@@ -745,20 +745,21 @@
 
 	patches.fixes/oprofile_bios_ctr.patch
 
-+needs_updating	patches.trace/lttng-instrumentation-irq.patch
-+needs_updating	patches.trace/lttng-instrumentation-timer.patch
-+needs_updating	patches.trace/lttng-instrumentation-kernel.patch
-+needs_updating	patches.trace/lttng-instrumentation-filemap.patch
-+needs_updating	patches.trace/lttng-instrumentation-swap.patch
-+needs_updating	patches.trace/lttng-instrumentation-memory.patch
-+needs_updating	patches.trace/lttng-instrumentation-page_alloc.patch
-+needs_updating	patches.trace/lttng-instrumentation-hugetlb.patch
-+needs_updating	patches.trace/lttng-instrumentation-net.patch
-+needs_updating	patches.trace/lttng-instrumentation-ipv4.patch
-+needs_updating	patches.trace/lttng-instrumentation-ipv6.patch
-+needs_updating	patches.trace/lttng-instrumentation-socket.patch
-+needs_updating	patches.trace/lttng-instrumentation-fs.patch
-+needs_updating	patches.trace/lttng-instrumentation-ipc.patch
+	patches.trace/lttng-instrumentation-irq.patch
+	patches.trace/lttng-instrumentation-softirq.patch
+	patches.trace/lttng-instrumentation-kernel.patch
+	patches.trace/lttng-instrumentation-filemap.patch
+	patches.trace/lttng-instrumentation-swap.patch
+	# fault.h: TP_PROTO(void) expansion failing on ia64, will fix next week
++tonyj	patches.trace/lttng-instrumentation-memory.patch
+	patches.trace/lttng-instrumentation-page_alloc.patch
+	patches.trace/lttng-instrumentation-hugetlb.patch
+	patches.trace/lttng-instrumentation-net.patch
+	patches.trace/lttng-instrumentation-ipv4.patch
+	patches.trace/lttng-instrumentation-ipv6.patch
+	patches.trace/lttng-instrumentation-socket.patch
+	patches.trace/lttng-instrumentation-fs.patch
+	patches.trace/lttng-instrumentation-ipc.patch
 
 	patches.trace/ftrace-framepointer.diff
 
