--- a/series.conf
+++ b/series.conf
@@ -511,6 +511,11 @@
 	patches.drivers/phy-broadcom-bug-fixes-for-sp1.patch
 	patches.drivers/tg3-update-version-to-3.104.patch
 
+	patches.drivers/sky2-add-register-definitions
+	patches.drivers/sky2-88E8059-support
+	patches.drivers/sky2-optima-tcp-offload-fix
+	patches.drivers/sky2-optima-fix-pci-cfg
+
 	#FCOE update (fate#306857, fate#306859, bnc#551175)
 	patches.suse/libfc-fix-typo-in-retry-check-on-received-prli.patch
 	patches.suse/libfc-fix-ddp-in-fc_fcp-for-0-xid.patch
