--- a/series.conf
+++ b/series.conf
@@ -443,6 +443,7 @@
 
 	patches.drivers/libata-ata_piix-clear-spurious-IRQ
 	patches.drivers/libata-ahci-aspire-3810t-noncq
+	patches.drivers/libata-missing-_SDD-is-not-an-error
 
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
