--- a/config.conf
+++ b/config.conf
@@ -34,7 +34,7 @@
 # G3 G4 bPlan
 +ppc		ppc/default
 # pSeries
-+ppc -syms	ppc/kdump
+#+ppc -syms	ppc/kdump
 # G5 PS3 pSeries
 +ppc		ppc/ppc64
 # PS3 bootloader
@@ -49,7 +49,7 @@
 # supporting 32bit and 64bit systems.
 +ppc64		ppc64/default
 # pSeries
-+ppc64 -syms	ppc64/kdump
+# +ppc64 -syms	ppc64/kdump
 # G5 pSeries
 +ppc64		ppc64/ppc64
 +ppc64 -syms	ppc64/debug
